find keys by pattern implemented
